<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructure.AlbumDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/description_style"
            android:text="@string/album_details_description" />

        <TextView
            android:id="@+id/album_details_to_favourites"
            style="@style/change_activity_style"
            android:text="@string/save_favourite" />

        <TextView
            android:id="@+id/album_details_to_now_playing"
            style="@style/change_activity_style"
            android:text="@string/play" />

        <TextView
            android:id="@+id/album_details_to_home"
            style="@style/change_activity_style"
            android:text="@string/go_home" />

    </LinearLayout>

</ScrollView>
