<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/description_style"
            android:text="@string/home_description" />

        <TextView
            android:id="@+id/home_to_album_details"
            style="@style/change_activity_style"
            android:text="@string/album" />

        <TextView
            android:id="@+id/home_to_favourites"
            style="@style/change_activity_style"
            android:text="@string/favourites" />

    </LinearLayout>

</ScrollView>
